--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:874029086467:ios:28cb63544959d71191db36",
-  "FIREBASE_PROJECT_ID": "groove-guru",
-  "GCM_SENDER_ID": "874029086467"
+  "GOOGLE_APP_ID": "1:26893631499:ios:1379acddc5bf412279470e",
+  "FIREBASE_PROJECT_ID": "groove-guru-8b76e",
+  "GCM_SENDER_ID": "26893631499"
 }
